--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,15 +6,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tatumcom/js": "^1.0.0-alpha.8",
+    "@tatumcom/js": "^3.0.0-alpha.5",
     "axios": "^1.3.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
-    "next": "^13.1.6",
+    "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.3",
-    "usehooks-ts": "^2.9.1"
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
