--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: [metadata]
     strategy:
       fail-fast: false
       matrix:
@@ -54,8 +55,8 @@ jobs:
         path: dist/
         retention-days: 7
       if: |
-        matrix.nodejs == 14 &&
-        contains(github.event.head_commit.message, 'release alpha')
+        needs.metadata.outputs.current_branch == 'master' ||
+        (matrix.nodejs == 14 && contains(github.event.head_commit.message, 'release alpha'))
 
   test:
     runs-on: ubuntu-latest
@@ -102,7 +103,7 @@ jobs:
         uses: rickstaa/action-create-tag@v1
         with:
           tag: "${{needs.metadata.outputs.package_version}}"
-      - name: "Create a GitHub release v${{ steps.package-version.outputs.current-version }}"
+      - name: "Create a GitHub release ${{ needs.metadata.outputs.package_version }}"
       # Create release using the tag above
         uses: ncipollo/release-action@v1
         with:
