--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.0.0-alpha.5",
+  "version": "1.0.0-alpha.6",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -40,6 +40,7 @@
   "dependencies": {
     "axios": "^1.3.2",
     "reflect-metadata": "^0.1.13",
+    "tslib": "^2.5.0",
     "typedi": "^0.10.0",
     "web3": "^1.8.2"
   },
