--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,14 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tatumcom/js": "^3.0.0-alpha.9",
+    "@tatumcom/js": "^1.0.0-alpha.6",
     "axios": "^1.3.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
