--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.3.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
-    "next": "latest",
+    "next": "^13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
