--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "axios-retry": "^3.4.0",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.5.0",
     "typedi": "^0.10.0",
