--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.0.0-alpha.9",
+  "version": "1.0.0-alpha.10",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -39,8 +39,8 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
-    "axios-retry": "^3.4.0",
     "reflect-metadata": "^0.1.13",
+    "retry-axios": "^3.0.0",
     "tslib": "^2.5.0",
     "typedi": "^0.10.0",
     "web3": "^1.8.2"
