--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@tatumio/polygon": "^2.1.3",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.26",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
