--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
+    "ip": "^1.1.8",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.5.0",
     "typedi": "^0.10.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
+    "@types/ip": "^1.1.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.26",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
