--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "prettier": "^2.8.4"
   }
 }
