ALL-45 - enable browser support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
 
     - run: yarn install
     - run: yarn add -D esbuild
-    - run: yarn build-all --platform=node
+    - run: yarn build-all
 
     - name: Upload build artifacts
       uses: actions/upload-artifact@v3
