--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
   },
   "dependencies": {
     "axios": "^1.3.2",
-    "ip": "^1.1.8",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.5.0",
     "typedi": "^0.10.0",
+    "uuid": "^9.0.0",
     "web3": "^1.8.2"
   },
   "devDependencies": {
