--- a/examples/nextjs/package.json
+++ b/examples/nextjs/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@tatumcom/js": "1.0.0-alpha.22",
+    "@tatumcom/js": "1.0.0-alpha.23",
     "axios": "^1.3.3",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
@@ -15,6 +15,11 @@
     "react-dom": "18.2.0",
     "swr": "^2.0.3",
     "usehooks-ts": "^2.9.1"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "devDependencies": {
     "@types/node": "18.11.3",
