--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.0.0-alpha.24",
+  "version": "1.0.0-alpha.25",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -15,11 +15,11 @@
   "engines": {
     "node": ">=14.0.0"
   },
-  "main": "./dist/main.js",
-  "types": "./dist/main.d.ts",
-  "browser": "./dist/esbuild/browser.js",
+  "main": "./dist/src/main.js",
+  "types": "./dist/src/main.d.ts",
+  "browser": "./dist/src/browser.js",
   "bin": {
-    "my-cli-tool": "./dist/esbuild/cli.js"
+    "my-cli-tool": "./dist/src/cli.js"
   },
   "scripts": {
     "cli": "ts-node src/cli.ts",
