--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/main.ts",
     "build": "tsc -p tsconfig.json",
-    "build-all": "yarn clean && yarn build"},
+    "build-all": "yarn clean && yarn build"
+  },
   "dependencies": {
     "axios": "^1.3.2",
     "reflect-metadata": "^0.1.13",
