--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build all packages
 on:
   push:
     branches:
-      - master
+      - v2
   pull_request:
 
 env:
@@ -33,7 +33,7 @@ jobs:
       - name: Derive appropriate SHAs for base and head for `nx affected` commands
         uses: nrwl/nx-set-shas@v2
         with:
-          main-branch-name: 'master'
+          main-branch-name: 'v2'
       - uses: actions/setup-node@v1
         with:
           node-version: '16'
