--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
     outputs:
       current_branch: ${{ steps.branch-name.outputs.current_branch }}
       package_version: ${{ env.package_version }}
+      release_exists: ${{ env.release_exists }}
     steps:
       - name: Get branch name
         id: branch-name
@@ -22,6 +23,11 @@ jobs:
         run: |
           version=$(jq -r '.version' package.json)
           echo "package_version=$version" >> "$GITHUB_ENV"
+      - name: Check if release for package version already exists
+        id: release-exists
+        run: |
+          curl --fail --silent --max-time 5 "https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/tags/${{ env.package_version }}" && echo "release_exists=true" >> $GITHUB_ENV || echo "release_exists=false" >> $GITHUB_ENV
+
 
   build:
     runs-on: ubuntu-latest
@@ -76,7 +82,7 @@ jobs:
 
   release:
     runs-on: ubuntu-latest
-    if: needs.metadata.outputs.current_branch == 'master'
+    if: needs.metadata.outputs.current_branch == 'master' && needs.metadata.outputs.release_exists == 'false'
     needs: [ metadata, build, test ]
     steps:
       - name: Checkout
@@ -85,14 +91,6 @@ jobs:
         run: |
           git config --local user.name github-actions
           git config --local user.email github-actions@github.com
-      - name: Get latest release
-        id: get_latest_release
-        run: |
-          latest_tag=$(curl -s --max-time 5 https://api.github.com/repos/${GITHUB_REPOSITORY}/releases/latest | jq -r '.tag_name')
-          echo "LATEST_RELEASE_TAG=$latest_tag" >> $GITHUB_ENV
-      - name: Ensure package version is updated
-        run: |
-          [ "${{needs.metadata.outputs.package_version}}" = "${{env.LATEST_RELEASE_TAG}}" ] && echo "Error: Package version is the same as the latest release" && exit 1 || exit 0
       - name: Get release notes
         id: get_release_notes
         uses: ffurrer2/extract-release-notes@v1
