--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -109,7 +109,7 @@ jobs:
             ${{ steps.get_release_notes.outputs.release_notes }}
   npm:
     runs-on: ubuntu-latest
-    if: needs.metadata.outputs.current_branch == 'master'
+    if: needs.metadata.outputs.current_branch == 'master' && needs.metadata.outputs.release_exists == 'false'
     needs: [ metadata, build, test ]
     steps:
       - uses: actions/checkout@v3
