increase bitcore-* library versions to latest ones

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatumio",
-  "version": "2.1.16",
+  "version": "2.1.17",
   "license": "MIT",
   "repository": "https://github.com/tatumio/tatum-js",
   "scripts": {
@@ -52,10 +52,10 @@
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.2.0",
-    "bitcore-lib": "8.25.8",
-    "bitcore-lib-cash": "^8.25.40",
-    "bitcore-lib-doge": "8.25.7",
-    "bitcore-lib-ltc": "8.25.27",
+    "bitcore-lib": "10.0.2",
+    "bitcore-lib-cash": "10.0.2",
+    "bitcore-lib-doge": "10.0.0",
+    "bitcore-lib-ltc": "10.0.0",
     "bn.js": "^5.2.1",
     "cashaddrjs": "^0.4.4",
     "caver-js": "1.8.2",
