--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -67,7 +67,7 @@ jobs:
         retention-days: 7
       if: |
         needs.metadata.outputs.current_branch == 'master' ||
-        contains(github.event.head_commit.message, 'release prerelase')
+        contains(github.event.head_commit.message, 'release prerelease')
 
   test:
     runs-on: ubuntu-latest
@@ -119,7 +119,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       (needs.metadata.outputs.current_branch == 'master' && needs.metadata.outputs.release_exists == 'false') ||
-      (needs.metadata.outputs.current_branch != 'master' && needs.metadata.outputs.release_prerelease != '' && contains(github.event.head_commit.message, 'release prerelase'))
+      (needs.metadata.outputs.current_branch != 'master' && needs.metadata.outputs.release_prerelease != '' && contains(github.event.head_commit.message, 'release prerelease'))
     needs: [ metadata, build, test ]
     steps:
       - uses: actions/checkout@v3
