--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatumio",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "license": "MIT",
   "repository": "https://github.com/tatumio/tatum-js",
   "scripts": {
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "@binance-chain/javascript-sdk": "^4.1.1",
+    "@cardano-sdk/core": "^0.10.0",
+    "@cardano-sdk/crypto": "^0.1.3",
     "@celo-tools/celo-ethers-wrapper": "^0.1.0",
     "@elrondnetwork/erdjs": "^9.2.4",
     "@harmony-js/crypto": "^0.1.56",
