--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -13,7 +13,7 @@
     "Blockchain"
   ],
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=18.0.0"
   },
   "main": "./dist/src/main.js",
   "types": "./dist/src/main.d.ts",
@@ -27,16 +27,16 @@
     "build-all": "yarn clean && yarn build"
   },
   "dependencies": {
-    "axios": "^1.3.2",
+    "bignumber.js": "^9.1.1",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.5.0",
     "typedi": "^0.10.0",
-    "uuid": "^9.0.0",
-    "web3": "^1.8.2"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.26",
+    "@types/node": "^18.15.11",
+    "@types/node-fetch": "^2.6.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -46,6 +46,7 @@
     "prettier": "^2.8.4",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.5",
+    "undici": "^5.21.0"
   }
 }
