--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        nodejs: [ 14, 16, 18 ]
+        nodejs: [ 18 ]
     steps:
     - uses: actions/checkout@v3
 
@@ -77,7 +77,7 @@ jobs:
     # https://github.com/actions/setup-node
     - uses: actions/setup-node@v3
       with:
-        node-version: 14
+        node-version: 18
         cache: 'yarn'
 
     - run: yarn install
@@ -125,11 +125,11 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/download-artifact@v3
         with:
-          name: build-14
+          name: build-18
           path: dist
       - uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 18
           registry-url: 'https://registry.npmjs.org'
       - run: yarn publish --access public
         env:
