Do not publish prerelase as latest

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
       package_version: ${{ env.package_version }}
       release_exists: ${{ env.release_exists }}
       release_prerelease: ${{ steps.semver-utils.outputs.prerelease }}
+      package_tag: ${{ env.package_tag }}
     steps:
       - name: Get branch name
         id: branch-name
@@ -34,6 +35,10 @@ jobs:
         with:
           lenient: false
           version: ${{ env.package_version }}
+      - name: NPM release tag
+        id: npm-release-tag
+        run: |
+          [[ "${{ steps.semver-utils.outputs.prerelease }}" == "" ]] && echo "package_tag=latest" >> $GITHUB_ENV ||  echo "package_tag=${{ env.package_version }}" >> $GITHUB_ENV
 
   build:
     runs-on: ubuntu-latest
@@ -131,6 +136,6 @@ jobs:
         with:
           node-version: 18
           registry-url: 'https://registry.npmjs.org'
-      - run: yarn publish --access public
+      - run: yarn publish --access public --tag ${{ needs.metadata.outputs.package_tag }}
         env:
           NODE_AUTH_TOKEN: ${{ secrets.TATUM_COM_NPM_TOKEN }}
