--- a/examples/openrpc/package.json
+++ b/examples/openrpc/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "ts-node src/index.ts"
+    "example": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
