--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.1.0-alpha.12",
+  "version": "1.1.0-alpha.13",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -29,11 +29,10 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "reflect-metadata": "^0.1.13",
-    "tslib": "^2.5.0",
-    "typedi": "^0.10.0",
-    "uuid": "^9.0.0"
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
+    "tslib": "^2.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^18.15.11",
     "@types/node-fetch": "^2.6.3",
