--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     /* Report error when not all code paths in function return a value. */,
     "noFallthroughCasesInSwitch": true
     /* Report errors for fallthrough cases in switch statement. */,
-    "importHelpers": true,
+    "importHelpers": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
