--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -8,10 +8,14 @@
     "build": "parcel build"
   },
   "dependencies": {
-    "@tatumcom/js": "^1.1.0-alpha.10"
+    "@tatumcom/js": "^1.1.0-alpha.13"
   },
   "devDependencies": {
+    "buffer": "^5.5.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
     "parcel": "^2.8.3",
-    "process": "^0.11.10"
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0"
   }
 }
