--- a/examples/openrpc/package.json
+++ b/examples/openrpc/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "tatum-ts-example",
+  "name": "openrpc-example",
   "version": "1.0.0",
   "description": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "example": "ts-node src/index.ts"
+    "example": "ts-node index.ts"
   },
   "author": "",
   "license": "ISC",
