--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,25 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "es2021",
     "module": "commonjs",
     "moduleResolution": "node",
     "declaration": true,
     "strict": true,
-    "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
-    "strictNullChecks": true /* Enable strict null checks. */,
-    "strictFunctionTypes": true /* Enable strict checking of function types. */,
-    "noUnusedLocals": true /* Report errors on unused locals. */,
-    "noUnusedParameters": true /* Report errors on unused parameters. */,
-    "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
-    "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
-    "importHelpers": true,
+    "noImplicitAny": true
+    /* Raise error on expressions and declarations with an implied 'any' type. */,
+    "strictNullChecks": true
+    /* Enable strict null checks. */,
+    "strictFunctionTypes": true
+    /* Enable strict checking of function types. */,
+    "noUnusedLocals": true
+    /* Report errors on unused locals. */,
+    "noUnusedParameters": true
+    /* Report errors on unused parameters. */,
+    "noImplicitReturns": true
+    /* Report error when not all code paths in function return a value. */,
+    "noFallthroughCasesInSwitch": true
+    /* Report errors for fallthrough cases in switch statement. */,
+    "importHelpers": false,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -25,10 +32,10 @@
     "outDir": "./dist",
     "types": [
       "node",
-      "jest"
+      "jest",
     ],
     "lib": [
-      "ES6",
+      "ESNext",
       "DOM"
     ]
   },
