--- a/examples/browser/package.json
+++ b/examples/browser/package.json
@@ -8,7 +8,7 @@
     "build": "parcel build"
   },
   "dependencies": {
-    "@tatumcom/js": "^1.1.0-alpha.15"
+    "@tatumcom/js": "^1.1.2"
   },
   "devDependencies": {
     "buffer": "^5.5.0",
