--- a/examples/openrpc/package.json
+++ b/examples/openrpc/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tatumcom/js": "^1.1.0-alpha.15"
+    "@tatumcom/js": "^1.1.2"
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
