--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "semi": false,
-  "printWidth": 110
+  "printWidth": 110,
+  "organizeImportsSkipDestructiveCodeActions": true
 }
