--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -19,7 +19,7 @@
   "types": "./dist/src/main.d.ts",
   "scripts": {
     "cli": "ts-node src/cli.ts",
-    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx && prettier --write src/",
     "test": "jest --forceExit --detectOpenHandles",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
@@ -32,7 +32,6 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
-    "tslib": "^2.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^18.15.11",
     "@types/node-fetch": "^2.6.3",
@@ -43,8 +42,10 @@
     "eslint": "^8.14.0",
     "jest": "27.0.0",
     "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
+    "tslib": "^2.5.0",
     "typescript": "^4.9.5",
     "undici": "^5.21.0"
   }
