--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumcom/js",
-  "version": "1.3.3",
+  "version": "1.3.4",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -10,6 +10,7 @@
   "license": "MIT",
   "keywords": [
     "Tatum",
+    "SDK",
     "Blockchain"
   ],
   "engines": {
