--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tatumio",
-  "version": "2.2.16",
+  "version": "2.2.17",
   "license": "MIT",
   "repository": "https://github.com/tatumio/tatum-js",
   "scripts": {
@@ -50,12 +50,12 @@
     "axios": "^0.26.0",
     "base-58": "^0.0.1",
     "base32.js": "^0.1.0",
+    "bchaddrjs": "^0.5.2",
     "bignumber.js": "^9.0.2",
     "bip32": "^2.0.5",
     "bip39": "^3.0.2",
     "bitcoinjs-lib": "^5.2.0",
     "bitcore-lib": "10.0.2",
-    "bitcore-lib-cash": "10.0.2",
     "bitcore-lib-doge": "10.0.0",
     "bitcore-lib-ltc": "10.0.0",
     "bn.js": "^5.2.1",
@@ -91,6 +91,7 @@
     "@nrwl/node": "14.8.4",
     "@nrwl/nx-cloud": "15.0.0",
     "@nrwl/workspace": "14.8.4",
+    "@types/bchaddrjs": "^0.4.0",
     "@types/bignumber.js": "^5.0.0",
     "@types/bip32": "^2.0.0",
     "@types/bip39": "^3.0.0",
