--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "reflect-metadata": "^0.1.13",
+    "tronweb": "^5.3.0",
     "typedi": "^0.10.0"
   },
   "devDependencies": {
