--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -137,4 +137,4 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: yarn publish --access public --tag ${{ needs.metadata.outputs.package_tag }}
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.TATUM_COM_NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
