--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@tatumcom/js",
-  "version": "1.5.10",
+  "name": "@tatumio/tatum",
+  "version": "3.0.0",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
