ALL-2336 Update Xrp library

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.formatOnSave": false,
+  "editor.formatOnSave": true,
   "eslint.enable": true,
   "eslint.packageManager": "yarn",
   "editor.codeActionsOnSave": {
