Move node-fetch from devDep to Dep

--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   "dependencies": {
     "bignumber.js": "^9.1.1",
     "reflect-metadata": "^0.1.13",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "@types/node-fetch": "^2.6.3"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
     "@types/node": "^18.15.11",
-    "@types/node-fetch": "^2.6.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
