Revert "ALL-2604 New package name - @tatumio/tatum-v1 (#919)" This reverts commit 964828ec New version and tagged publish of v1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,6 @@ jobs:
 
       - run: yarn lint
 
-      - run: yarn publish --access public
+      - run: yarn publish --access public --tag 1.x.x
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
