--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumio/tatum",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -33,18 +33,17 @@
     "typedi": "^0.10.0"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^29.5.5",
     "@types/node": "^18.15.11",
-    "@types/node-fetch": "^2.6.3",
     "@types/uuid": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.14.0",
-    "jest": "27.0.0",
+    "jest": "^29.7.0",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
-    "ts-jest": "^27.1.4",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.7.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
