ALL-2878 - Add Beacon methods to eth

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
 env:
   SDK_ERROR_MESSAGES_VERSION: "master"
   V4_API_KEY_MAINNET: ${{ secrets.V4_API_KEY_MAINNET }}
+  V4_API_KEY_TESTNET: ${{ secrets.V4_API_KEY_TESTNET }}
   V3_API_KEY_MAINNET: ${{ secrets.V3_API_KEY_MAINNET }}
   V3_API_KEY_TESTNET: ${{ secrets.V3_API_KEY_TESTNET }}
   NON_TATUM_RPC_ETH_URL: ${{ secrets.NON_TATUM_RPC_ETH_URL }}
