--- a/.github/workflows/release-pr.yaml
+++ b/.github/workflows/release-pr.yaml
@@ -7,6 +7,7 @@ on:
 
 env:
   V4_API_KEY_MAINNET: ${{ secrets.V4_API_KEY_MAINNET }}
+  V4_API_KEY_TESTNET: ${{ secrets.V4_API_KEY_TESTNET }}
   V3_API_KEY_MAINNET: ${{ secrets.V3_API_KEY_MAINNET }}
   V3_API_KEY_TESTNET: ${{ secrets.V3_API_KEY_TESTNET }}
   NON_TATUM_RPC_ETH_URL: ${{ secrets.NON_TATUM_RPC_ETH_URL }}
