--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.14.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^29.1.1",
@@ -49,5 +50,14 @@
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
     "undici": "^5.21.0"
+  },
+  "jest-junit": {
+    "outputDirectory": "reports",
+    "outputName": "jest-junit.xml",
+    "ancestorSeparator": " › ",
+    "uniqueOutputName": "false",
+    "suiteNameTemplate": "{filepath}",
+    "classNameTemplate": "{classname}",
+    "titleTemplate": "{title}"
   }
 }
