--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,12 +98,12 @@ jobs:
         V3_API_KEY_TESTNET: ${{ secrets.V3_API_KEY_TESTNET }}
         NON_TATUM_RPC_ETH_URL: ${{ secrets.NON_TATUM_RPC_ETH_URL }}
         VERBOSE: ${{ secrets.verbose }}
-
+    - run: ls -la
     - uses: dorny/test-reporter@v1
       if: failure()
       with:
         name: JEST Tests
-        path: reports/jest-*.xml
+        path: reports/jest-junit.xml
         reporter: jest-junit
 
   release:
