--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,7 +91,6 @@ jobs:
 
     - run: yarn install
     - run: yarn lint
-    - run: ls -la
     - run: yarn test
       env:
         V4_API_KEY_MAINNET: ${{ secrets.V4_API_KEY_MAINNET }}
@@ -99,12 +98,10 @@ jobs:
         V3_API_KEY_TESTNET: ${{ secrets.V3_API_KEY_TESTNET }}
         NON_TATUM_RPC_ETH_URL: ${{ secrets.NON_TATUM_RPC_ETH_URL }}
         VERBOSE: ${{ secrets.verbose }}
-    - run: ls -la
-      if: success() || failure()
     - uses: dorny/test-reporter@v1
       if: success() || failure()
       with:
-        name: JEST Tests
+        name: TEST REPORT
         path: reports/jest-junit.xml
         reporter: jest-junit
 
