ALL-3495 - Add getBlockByNumber to possible archive list (#1027)
* ALL-3495 - Add getBlockByNumber to possible archive list

* ALL-3495 - Add getBlockByNumber to possible archive list - cleanup

* ALL-3495 - Add getBlockByNumber to possible archive list - pipeline

* ALL-3495 - Add getBlockByNumber to possible archive list - pipeline 2

* ALL-3495 - Add getBlockByNumber to possible archive list - pipeline 3

* ALL-3495 - Add getBlockByNumber to possible archive list - pipeline 4

* ALL-3495 - Add getBlockByNumber to possible archive list - pipeline 5

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,6 +98,12 @@ jobs:
         V3_API_KEY_TESTNET: ${{ secrets.V3_API_KEY_TESTNET }}
         NON_TATUM_RPC_ETH_URL: ${{ secrets.NON_TATUM_RPC_ETH_URL }}
         VERBOSE: ${{ secrets.verbose }}
+    - uses: dorny/test-reporter@v1
+      if: success() || failure()
+      with:
+        name: TEST REPORT
+        path: reports/jest-junit.xml
+        reporter: jest-junit
 
   release:
     runs-on: ubuntu-latest
