--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumio/tatum",
-  "version": "4.1.30",
+  "version": "4.1.31",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -42,6 +42,7 @@
     "dotenv": "^16.0.3",
     "eslint": "^8.14.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "ts-jest": "^29.1.1",
