--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tatumio/tatum",
-  "version": "4.1.37",
+  "version": "4.2.0",
   "description": "Tatum JS SDK",
   "author": "Tatum",
   "repository": "https://github.com/tatumio/tatum-js",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "bignumber.js": "^9.1.1",
+    "chalk": "^4.1.2",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0"
   },
