--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "main": "./dist/src/main.js",
+  "main": "./dist/tatum-sdk.umd.js",
+  "module": "./dist/tatum-sdk.es.js",
+  "browser": "./dist/tatum-sdk.iife.js",
   "types": "./dist/src/main.d.ts",
   "scripts": {
     "cli": "ts-node src/cli.ts",
@@ -24,7 +26,8 @@
     "test": "jest --forceExit",
     "clean": "rm -rf dist build package",
     "ts-node": "ts-node",
-    "build": "tsc -p tsconfig.json",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build": "vite build && npm run build:types",
     "build-all": "yarn clean && yarn build",
     "pack-all": "yarn build-all && yarn pack"
   },
@@ -50,6 +53,7 @@
     "ts-node": "^10.7.0",
     "tslib": "^2.5.0",
     "typescript": "^5.0.4",
-    "undici": "^5.21.0"
+    "undici": "^5.21.0",
+    "vite": "^5.0.12"
   }
 }
